<?xml version="1.0"?>
<package>
  <name>monitoring_robocup</name>
  <version>0.0.0</version>
  <description>
    UDP viewer for RhobanServer
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>

  <license>MIT</license>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>starkit_utils</build_depend> <!-- StarkitRobots/utils -->
  <build_depend>starkit_geometry</build_depend> <!-- StarkitRobots/geometry -->
  <build_depend>starkit_team_play</build_depend> <!-- StarkitRobots/teamplay -->
  <build_depend>robocup_referee</build_depend> <!-- StarkitRobots/robocupreferee -->
  <build_depend>sfml</build_depend> <!-- StarkitRobots/sfml -->

  <run_depend>starkit_utils</run_depend>
  <run_depend>starkit_geometry</run_depend>
  <run_depend>starkit_referee</run_depend>
  <run_depend>starkit_team_play</run_depend>
  <run_depend>sfml</run_depend>

</package>

